# transactsync

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ghcr-docker-publish.yml
docs/: architecture.excalidraw
src/: db.py  fetch_emails.py  fetch_transactions.py  main.py
templates/: prompt.txt  transaction_rules.yaml
tests/: test_db.py  test_fetch_emails.py  test_fetch_transactions.py  test_transactsync.py  transaction_rules.yaml
