[project]
name = "transactsync"
version = "0.2.0"
description = "AI powered Python app to log financial transactions by parsing email alerts"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "duckdb>=1.3.1",
    "llama-index>=0.12.43",
    "llama-index-llms-ollama>=0.6.2",
    "pyaml>=25.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--import-mode=importlib"
