[project]
name = "transactsync"
version = "1.0.0"
description = "AI powered Python app to log financial transactions by parsing email alerts"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "duckdb>=1.3.1",
    "ollama>=0.5.1",
    "pyaml>=25.5.0",
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--import-mode=importlib"
